# memory-allocation-engine

./: .gitignore  CMakeLists.txt  InstallationLog.txt  LICENSE  README.md
include/: central_pool.hpp  slab_allocator.hpp  thread_cache.hpp
src/: benchmark.cpp  central_pool.cpp  slab_allocator.cpp  thread_cache.cpp
